--- a/src/client/app/ng2-tests.html
+++ b/src/client/app/ng2-tests.html
@@ -1,5 +1,8 @@
-<p>
-  ng2-tests Works!
-</p>
+<form>
+  <input type="text" placeholder="Username" #username>
+  <button (click)="findUser(username)">Find user</button>
+</form>
+
+<ta-user [user]="user" [msg]="msg"></ta-user>
 
 <router-outlet></router-outlet>
