--- a/src/client/app/ng2-tests.html
+++ b/src/client/app/ng2-tests.html
@@ -1,2 +1,4 @@
-<ta-login (login)="findUser($event)"></ta-login>
-<ta-user [user]="user" [msg]="msg"></ta-user>
+<div class="searchfield">
+  <ta-login (login)="findUser($event)"></ta-login>
+  <ta-user [user]="user" [msg]="msg"></ta-user>
+</div>
