--- a/src/client/app/ta-login/ta-login.html
+++ b/src/client/app/ta-login/ta-login.html
@@ -1,5 +1,4 @@
 <form>
-  <input type="text" placeholder="Username" #username>
+  <input type="text" placeholder="Username" #username autofocus>
   <button (click)="loginSubmit(username)">Find user</button>
 </form>
-
